<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color_theme"
        android:id="@+id/clOnBoardingLogin"
        tools:context=".views.on_boarding.LoginActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clLoginLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/cardLoginInfo">
                    <include layout="@layout/include_layout_title_msg"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardLoginInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardBackgroundColor="@color/bg_color_card"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardMaxElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true"
                    app:cardPreventCornerOverlap="true"
                    android:translationZ="@dimen/_2sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/_15sdp"
                        android:paddingBottom="@dimen/_15sdp"
                        android:paddingStart="@dimen/_20sdp"
                        android:paddingEnd="@dimen/_20sdp">

                        <TextView
                            android:id="@+id/tvLoginTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_alternates_extrabold"
                            android:text="@string/welcome"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_20ssp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="@dimen/_10sdp"/>

                        <EditText
                            android:id="@+id/etLoginEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            style="@style/EditTextStyle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle" />
                        <TextView
                            android:id="@+id/tvLoginEmailError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/etLoginEmail"
                            style="@style/ErrorText"
                            android:visibility="gone"/>
                        <EditText
                            android:id="@+id/etLoginPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:hint="@string/password"
                            android:singleLine="true"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            style="@style/EditTextStyle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvLoginEmailError"/>
                        <TextView
                            android:id="@+id/tvLoginPasswordError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/etLoginPassword"
                            style="@style/ErrorText"
                            android:visibility="gone"/>
                        <TextView
                            android:id="@+id/tvForgotPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forgot_password"
                            android:textColor="@color/white"
                            android:fontFamily="@font/montserrat_alternates"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_15sdp"
                            android:includeFontPadding="false"
                            app:layout_constraintTop_toBottomOf="@+id/tvLoginPasswordError"
                            app:layout_constraintEnd_toEndOf="parent" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            style="@style/ButtonStyle"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@+id/cardLoginInfo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/tvLoginRegisterTextMsg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:includeFontPadding="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        android:fontFamily="@font/montserrat_alternates"/>
                    <TextView
                        android:id="@+id/tvLoginRegisterText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_account"
                        android:paddingStart="@dimen/_8sdp"
                        android:textColor="@color/bg_color_btn"
                        android:textSize="@dimen/_13sdp"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/montserrat_alternates_medium"/>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>