<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color_theme"
        tools:context=".views.on_boarding.CreateAccountActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <include android:id="@+id/includeLayoutBack"
                layout="@layout/include_layout_back"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/clBackBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clCreateLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <include layout="@layout/include_layout_title_msg"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardCreateAccountInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clCreateLogo"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardBackgroundColor="@color/bg_color_card"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardMaxElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true"
                    app:cardPreventCornerOverlap="true"
                    android:translationZ="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/_15sdp"
                        android:paddingBottom="@dimen/_15sdp"
                        android:paddingStart="@dimen/_20sdp"
                        android:paddingEnd="@dimen/_20sdp">
                        <TextView
                            android:id="@+id/tvCreateAccountTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_alternates_extrabold"
                            android:text="@string/create_account"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_20ssp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:transitionName="create_account"/>
                        <EditText
                            android:id="@+id/etCreateAccountFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:hint="@string/first_name"
                            android:inputType="textPersonName"
                            style="@style/EditTextStyle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvCreateAccountTitle" />
                        <TextView
                            android:id="@+id/tvCreateAccountFirstNameError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/etCreateAccountFirstName"
                            style="@style/ErrorText"
                            android:visibility="gone"/>
                        <EditText
                            android:id="@+id/etCreateAccountLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:hint="@string/last_name"
                            android:inputType="textPersonName"
                            style="@style/EditTextStyle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvCreateAccountFirstNameError" />
                        <TextView
                            android:id="@+id/tvCreateAccountLastNameError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/etCreateAccountLastName"
                            style="@style/ErrorText"
                            android:visibility="gone"/>
                        <EditText
                            android:id="@+id/etCreateAccountEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            style="@style/EditTextStyle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvCreateAccountLastNameError" />
                        <TextView
                            android:id="@+id/tvCreateAccountEmailError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/etCreateAccountEmail"
                            style="@style/ErrorText"
                            android:visibility="gone"/>
                        <EditText
                            android:id="@+id/etCreateAccountPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            style="@style/EditTextStyle"
                            android:singleLine="true"
                            android:imeOptions="actionDone"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvCreateAccountEmailError"/>
                        <TextView
                            android:id="@+id/tvCreateAccountPasswordError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/etCreateAccountPassword"
                            style="@style/ErrorText"
                            android:visibility="gone"/>
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnCreateAccount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/create_account"
                            style="@style/ButtonStyle"
                            android:layout_marginTop="@dimen/_20sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvCreateAccountPasswordError"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@+id/cardCreateAccountInfo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/tvCreateAccountLoginrTextMsg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:includeFontPadding="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        android:fontFamily="@font/montserrat_alternates"/>
                    <TextView
                        android:id="@+id/tvCreateAccountLoginText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:paddingStart="@dimen/_8sdp"
                        android:textColor="@color/bg_color_btn"
                        android:textSize="@dimen/_13sdp"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/montserrat_alternates_medium"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>