<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color_theme"
        tools:context=".views.on_boarding.ForgotPasswordActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <include android:id="@+id/includeLayoutBack"
                layout="@layout/include_layout_back"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/clBackBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
               <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clForgotPasswordLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/cardForgotPasswordInfo">
                    <include layout="@layout/include_layout_title_msg"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardForgotPasswordInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardBackgroundColor="@color/bg_color_card"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardMaxElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true"
                    app:cardPreventCornerOverlap="true"
                    android:translationZ="@dimen/_2sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/_15sdp"
                        android:paddingBottom="@dimen/_15sdp"
                        android:paddingStart="@dimen/_20sdp"
                        android:paddingEnd="@dimen/_20sdp">

                        <TextView
                            android:id="@+id/tvForgotPasswordTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:fontFamily="@font/montserrat_alternates_extrabold"
                            android:text="@string/forgot_password"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_20ssp"
                            android:transitionName="forgot_password"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                        <TextView
                            android:id="@+id/tvForgotPasswordMsg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_alternates"
                            android:text="@string/forgot_password_msg"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12ssp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordTitle"/>
                        <EditText
                            android:id="@+id/etForgotPassEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            style="@style/EditTextStyle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordMsg" />
                        <TextView
                            android:id="@+id/tvForgotPasswordEmailError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/etForgotPassEmail"
                            style="@style/ErrorText"
                            android:visibility="gone"/>
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnForgotPasswordSubmit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_25sdp"
                            android:layout_marginStart="@dimen/_25sdp"
                            android:layout_marginEnd="@dimen/_25sdp"
                            app:backgroundTint="@color/bg_color_btn"
                            android:textColor="@color/white"
                            android:text="@string/submit"
                            android:textAllCaps="false"
                            android:fontFamily="@font/montserrat_alternates_semibold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordEmailError"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>